--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -23,7 +23,7 @@ Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 #IgnorePkg   =
-#IgnoreGroup =
+IgnoreGroup = modified
 
 #NoUpgrade   =
 #NoExtract   =
