Lots of minor changes

--- a/etc/X11/xorg.conf.d/10-keyboard.conf
+++ b/etc/X11/xorg.conf.d/10-keyboard.conf
@@ -2,5 +2,5 @@ Section "InputClass"
 	Identifier		"system-keyboard"
 	MatchIsKeyboard		"on"
 	Option "XkbLayout"	"us,ru"
-	Option "XkbOptions"	"grp:caps_toggle"
+	Option "XkbOptions"	"grp:shift_caps_toggle"
 EndSection
