--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -100,19 +100,22 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [infinality-bundle]
-# Server = http://ibn.net63.net/infinality-bundle/$arch
+#Server = http://ibn.net63.net/infinality-bundle/$arch
 Server = http://bohoomil.com/repo/$arch
 
 [infinality-bundle-multilib]
-# Server = http://ibn.net63.net/infinality-bundle-multilib/$arch
+#Server = http://ibn.net63.net/infinality-bundle-multilib/$arch
 Server = http://bohoomil.com/repo/multilib/$arch
 
 [infinality-bundle-fonts]
-# Server = http://ibn.net63.net/infinality-bundle-fonts
+#Server = http://ibn.net63.net/infinality-bundle-fonts
 Server = http://bohoomil.com/repo/fonts
 
 [repo-ck]
 Server = http://repo-ck.com/$arch
 
-[archaudio-production]
-Server = http://repos.archaudio.org/$repo/$arch
+#[archaudio-production]
+#Server = http://repos.archaudio.org/$repo/$arch
+
+[coderkun-aur-audio]
+Server = http://arch.coderkun.de/$repo/$arch
