Removed discontinued pacman repo

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -107,15 +107,15 @@ Include = /etc/pacman.d/mirrorlist
 
 [infinality-bundle]
 #Server = http://ibn.net63.net/infinality-bundle/$arch
-Server = http://bohoomil.com/repo/$arch
+#Server = http://bohoomil.com/repo/$arch
 
 [infinality-bundle-multilib]
 #Server = http://ibn.net63.net/infinality-bundle-multilib/$arch
-Server = http://bohoomil.com/repo/multilib/$arch
+#Server = http://bohoomil.com/repo/multilib/$arch
 
 [infinality-bundle-fonts]
 #Server = http://ibn.net63.net/infinality-bundle-fonts
-Server = http://bohoomil.com/repo/fonts
+#Server = http://bohoomil.com/repo/fonts
 
 [repo-ck]
 SigLevel = PackageRequired
